Gave home images height properties to fix issue on tablet

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,5 +1,5 @@
 html {
-    height: 100%;
+    height: 100vh;
     background: url('/media/home-background.jpg') no-repeat center center fixed;
     background-size: cover;
 }
@@ -71,6 +71,7 @@ html {
 
 .about-us-image{
     width: 200px;
+    height: 150px;
     border-radius: 10px;
     margin: 10px 20px;
     
@@ -111,6 +112,7 @@ html {
 @media only screen and (max-width: 768px){
 .about-us-image{
     width: 150px;
+    height: 100px;
 }
 
 .about-us-header{
